# nLPluginQmlSample

./: .clang-format  .gitignore  CMakeLists.txt  README.md  client.h  main.cpp  message.h  text_loader.h  version.h.in
licenses/: qt.txt
qml/: CloseButton.qml  License.qml  Main.qml  Model.qml  ModelListView.qml  RegisteredModelListView.qml
resources/: create_icon.cmd
